@@ -47,7 +47,7 @@ genWorkenvir <- function(workflow, mydirname=NULL, bam=FALSE) {
         if(bam==TRUE) file.copy(normalizePath(list.files(pathList()$bamdir, "*", full.names=TRUE)), "varseq/results", overwrite=TRUE, recursive=TRUE)
         file.copy(normalizePath(list.files(pathList()$annotationdir, "*", full.names=TRUE)), "varseq/data", overwrite=TRUE, recursive=TRUE)
         file.copy(pathList()$paramdir, "varseq/", recursive=TRUE)
-        file.copy(c("varseq/param/torque.tmpl", "varseq/param/.BatchJobs.R"), "./varseq")
+        file.copy(c("varseq/param/slurm.tmpl", "varseq/param/.BatchJobs.R"), "./varseq")
         file.copy(c("varseq/param/gatk_run.sh", "varseq/param/sambcf_run.sh"), "./varseq")
         file.copy(c("varseq/param/targetsPE.txt", "varseq/param/targets.txt"), "./varseq")
         file.copy(c("varseq/param/Makefile_varseq"), "./varseq/Makefile")
@@ -60,7 +60,7 @@ genWorkenvir <- function(workflow, mydirname=NULL, bam=FALSE) {
         if(bam==TRUE) file.copy(normalizePath(list.files(pathList()$bamdir, "*", full.names=TRUE)), "rnaseq/results", overwrite=TRUE, recursive=TRUE)
         file.copy(normalizePath(list.files(pathList()$annotationdir, "*", full.names=TRUE)), "rnaseq/data", overwrite=TRUE, recursive=TRUE)
         file.copy(pathList()$paramdir, "rnaseq/", recursive=TRUE)
-        file.copy(c("rnaseq/param/torque.tmpl", "rnaseq/param/.BatchJobs.R"), "./rnaseq")
+        file.copy(c("rnaseq/param/slurm.tmpl", "rnaseq/param/.BatchJobs.R"), "./rnaseq")
         file.copy(c("rnaseq/param/targetsPE.txt", "rnaseq/param/targets.txt"), "./rnaseq")
         file.copy(c("rnaseq/param/Makefile_rnaseq"), "./rnaseq/Makefile")
         file.copy(c("rnaseq/param/bibtex.bib"), "./rnaseq/bibtex.bib")
@@ -72,7 +72,7 @@ genWorkenvir <- function(workflow, mydirname=NULL, bam=FALSE) {
         if(bam==TRUE) file.copy(normalizePath(list.files(pathList()$bamdir, "*", full.names=TRUE)), "riboseq/results", overwrite=TRUE, recursive=TRUE)
         file.copy(normalizePath(list.files(pathList()$annotationdir, "*", full.names=TRUE)), "riboseq/data", overwrite=TRUE, recursive=TRUE)
         file.copy(pathList()$paramdir, "riboseq/", recursive=TRUE)
-        file.copy(c("riboseq/param/torque.tmpl", "riboseq/param/.BatchJobs.R"), "./riboseq")
+        file.copy(c("riboseq/param/slurm.tmpl", "riboseq/param/.BatchJobs.R"), "./riboseq")
         file.copy(c("riboseq/param/targetsPE.txt", "riboseq/param/targets.txt"), "./riboseq")
         file.copy(c("riboseq/param/Makefile_riboseq"), "./riboseq/Makefile")
         file.copy(c("riboseq/param/bibtex.bib"), "./riboseq/bibtex.bib")
@@ -84,7 +84,7 @@ genWorkenvir <- function(workflow, mydirname=NULL, bam=FALSE) {
         if(bam==TRUE) file.copy(normalizePath(list.files(pathList()$bamdir, "*", full.names=TRUE)), "chipseq/results", overwrite=TRUE, recursive=TRUE)
         file.copy(normalizePath(list.files(pathList()$annotationdir, "*", full.names=TRUE)), "chipseq/data", overwrite=TRUE, recursive=TRUE)
         file.copy(pathList()$paramdir, "chipseq/", recursive=TRUE)
-        file.copy(c("chipseq/param/torque.tmpl", "chipseq/param/.BatchJobs.R"), "./chipseq")
+        file.copy(c("chipseq/param/slurm.tmpl", "chipseq/param/.BatchJobs.R"), "./chipseq")
         file.copy(c("chipseq/param/targetsPE_chip.txt", "chipseq/param/targets_chip.txt"), "./chipseq")
         file.copy(c("chipseq/param/Makefile_chipseq"), "./chipseq/Makefile")
         file.copy(c("chipseq/param/bibtex.bib"), "./chipseq/bibtex.bib")
